--- a/src/styles/-layout.scss
+++ b/src/styles/-layout.scss
@@ -1,7 +1,7 @@
 ﻿.header-layout{
     height: auto!important;
     position: relative;
-    background: #1d212a;
+    background: #374158;
     padding:0!important;
     .header-panel{
         width:100%;
