--- a/src/styles/-workOrder.scss
+++ b/src/styles/-workOrder.scss
@@ -310,6 +310,150 @@
             }
         }
     }
+    .temHeader{
+        clear: both;
+        display: block;
+        position: relative;
+        .temHeaderFl{
+            clear: both;
+        }
+        .temHeaderFr{
+            float: right;
+            width: 55px;
+            height: 55px;
+            display: block;
+            text-align: center;
+            line-height: 55px;
+            margin: -10px -10px -10px 0px;
+            border-left: 1px solid #f3f6f9;
+            position: relative;
+            cursor: pointer;
+            background-image:url('../assets/workIcon.png');
+            background-size: 15px 12px;
+            background-position: center center;
+            background-repeat: no-repeat;
+        }
+        .temHeaderfix{
+            position: absolute;
+            right: -10px;
+            top:30px;
+            border-radius: 2px;
+            background-color: #FFFFFF;
+            box-shadow: 0 0px 0px 0 rgba(0,0,0,0.1);
+            box-sizing: border-box;
+            margin: 2px 0;
+            transition:all 0.5s;
+            height:0px;
+            overflow: hidden;
+            &.active{
+                top:40px;
+                height:auto;
+                border: solid 1px #e6ebf5;
+                box-shadow: 0 2px 12px 0 rgba(0,0,0,0.1);
+            }
+            .temHeaderfixTop{  
+                height: 280px;
+                overflow: auto;
+                overflow-x: hidden;
+                padding: 0px 10px;              
+                .temHeader-checkbox{
+                    display: block;
+                    height: 28px;
+                    margin:0px 3px;
+                    line-height:0;
+                    font-size:0;
+                    text-align: left;
+                    cursor: pointer;
+                    i{
+                        display: inline-block;
+                        width: 11px;
+                        height: 11px;
+                        border: 1px solid #e0e0e0;
+                        margin-right: 10px;
+                        position: relative;
+                        vertical-align: -1px;
+                        &:before {
+                            content: '';
+                            width: 7px;
+                            height: 4px;
+                            transform: rotate(-45deg);
+                            border-left: 1px solid #fff;
+                            border-bottom: 1px solid #fff;
+                            position: absolute;
+                            left: 1px;
+                            top: 1px;
+                        }
+                    }
+                    span{
+                        font-size: 13px;
+                        display: inline-block;
+                        height: 28px;
+                        line-height: 28px;
+                        color:#666666;
+                    }
+                    &.active.is-disabled{
+                        cursor: not-allowed;
+                        &:hover{
+                            i{
+                                border: 1px solid #e0e0e0!important;
+                                background:#f5f5f5!important;
+                                &:before {
+                                    border-left: 1px solid #bfbfbf!important;
+                                    border-bottom: 1px solid #bfbfbf!important;
+                                    display: block;
+                                }
+                            }
+                        }
+                        i{
+                            border: 1px solid #e0e0e0!important;
+                            background:#f5f5f5!important;
+                            &:before {
+                                border-left: 1px solid #bfbfbf!important;
+                                border-bottom: 1px solid #bfbfbf!important;
+                            }
+                        }
+                        span{
+                            color: #bfbfbf!important;
+                        }
+                    }
+                    &.active{
+                        i{
+                            border: 1px solid #2e88ff;
+                            background:#2e88ff;
+                            &:before {
+                                border-left: 1px solid #fff;
+                                border-bottom: 1px solid #fff;
+                            }
+                        }
+                        span{
+                            color: #2e88ff;
+                        }
+                    }
+                    &:hover{
+                        i{
+                            border: 1px solid #2e88ff;
+                            background:#f4f4f4;
+                            &:before {display: none;}
+                        }
+                        span{
+                            color:#2e88ff;
+                        }
+                    }
+                }
+            }
+            .temHeaderBom{
+                border-top: 1px solid #e6ebf5;
+                padding: 8px;
+                overflow: hidden;
+                span{
+                    float: left;
+                    width:50%;
+                    text-align: center;
+                    cursor: pointer;
+                }
+            }
+        }
+    }
     .table-input{
         .el-input{
             clear: both;
