首页统计系统优化

--- a/src/styles/-DepIndex.scss
+++ b/src/styles/-DepIndex.scss
@@ -164,7 +164,7 @@
                 padding-top:24px;
                 padding-bottom: 0;
                 .svg-i{
-                    background:#f4f7fd;
+                    background:#dce7fd;
                     position: relative;
                     color: #2259e5;
                     .svg-icon{
