--- a/src/styles/-layout.scss
+++ b/src/styles/-layout.scss
@@ -112,7 +112,7 @@
                     top: -14px;
                     bottom: -14px;
                     width: 1px;
-                    background: linear-gradient(#1d212a 15%,#feffff 50%,#1d212a 85%);
+                    background: linear-gradient(#374158 15%,#feffff 50%,#374158 85%);
                 }
                 .article-search{
                     width: 100%;
@@ -174,7 +174,7 @@
                     top: -14px;
                     bottom: -14px;
                     width: 1px;
-                    background: linear-gradient(#1d212a 15%,#feffff 50%,#1d212a 85%);
+                    background: linear-gradient(#374158 15%,#feffff 50%,#374158 85%);
                 }
                 .item-button{
                     display: inline-block;
