首页部门成本隐藏

--- a/src/styles/-home.scss
+++ b/src/styles/-home.scss
@@ -1853,6 +1853,9 @@
         }
     }
 }
+.module-item-bom{
+    margin-bottom: 0;
+}
 .home-index{
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
